# interkomm

./: .gitignore  Podfile  README.md  build.bat  build.sh
source/: CMakeLists.txt  PosixUtil.cpp
source/app/cmake/: interkomm.cmake  studiomux.cmake
source/app/cmake/android/: CMakeLists.txt
source/app/cmake/android/gradle/: build.gradle
source/app/cmake/android/gradle/app/: MyMonKeyStore  api-4953367858022358363-998565-8fd4970eaa19.p12  build.gradle
source/app/cmake/android/gradle/app/src/main/: AndroidManifest_in.xml
source/app/cmake/android/gradle/gradle/wrapper/: gradle-wrapper.properties
source/app/cmake/ios/: CMakeLists.txt  LaunchScreen.storyboard  exportOptions_in.plist  plist.in
source/app/cmake/osx/: CMakeLists.txt  Icon.icns
source/app/cmake/rpi/: CMakeLists.txt
source/app/cmake/uwp/: CMakeLists.txt  Package_vc12.store.appxmanifest.in
source/app/cmake/win/: CMakeLists.txt
source/app/src/common/: main.cpp
source/app/src/common/Audio/: Mixer.cpp  Mixer.h
source/app/src/common/Connection/: CallbackManager.cpp  CallbackManager.h  ConnectionManager.cpp  ConnectionManager.h  MCGroupSendReceive.cpp  MCGroupSendReceive.h  MCGroups.cpp  MCGroups.h  MonitorThread.cpp  MonitorThread.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h
source/app/src/common/Layout/: ContentView.cpp  ContentView.h  LayoutManager.cpp  LayoutManager.h
source/app/src/common/Layout/Channels/: ChannelView.cpp  ChannelView.h  ChannelViewContainer.cpp  ChannelViewContainer.h  UserView.cpp  UserView.h
source/app/src/common/Layout/Communication/: CommunicationView.cpp  CommunicationView.h  UserView.cpp  UserView.h
source/app/src/common/Layout/Communication/Channel/: ChannelView.cpp  ChannelView.h
source/app/src/common/Layout/Communication/Overall/: ChannelFrameView.cpp  ChannelFrameView.h  OverallView.cpp  OverallView.h
source/app/src/common/Layout/Communication/Overall/ChannelFrame/: FrameChannelTalkButton.cpp  FrameChannelTalkButton.h  FrameChannelViewButton.cpp  FrameChannelViewButton.h  FrameReturnTalkButton.cpp  FrameReturnTalkButton.h
source/app/src/common/Layout/DebugTemp/: DebugView.cpp  DebugView.h  NetworkDebugView.cpp  NetworkDebugView.h
source/app/src/common/Layout/Dialog/: ChannelDialog.cpp  ChannelDialog.h  ProfileDialog.cpp  ProfileDialog.h
source/app/src/common/Layout/Profile/: ProfileView.cpp  ProfileView.h
source/app/src/common/Layout/Settings/: NetworkSettingsView.cpp  NetworkSettingsView.h  SettingsDetailBase.cpp  SettingsDetailBase.h  SettingsDetailView.cpp  SettingsDetailView.h  SettingsView.cpp  SettingsView.h
source/app/src/common/Layout/Settings/Channels/: ChannelButton.cpp  ChannelButton.h  ChannelsView.cpp  ChannelsView.h
source/app/src/common/Layout/Settings/Profile/: ProfilePage.cpp  ProfilePage.h
source/app/src/common/Layout/Settings/Roles/: RoleButton.cpp  RoleButton.h  RolesView.cpp  RolesView.h
source/app/src/common/Layout/TopBar/: TopBar.cpp  TopBar.h
source/app/src/common/Layout/TopBar/Controls/: ConnectionView.cpp  ConnectionView.h  ServerView.cpp  ServerView.h  TopBarButton.cpp  TopBarButton.h
source/app/src/common/Layout/UDPTest/: UDPTestView.cpp  UDPTestView.h
source/app/src/common/Root/: Interkomm.cpp  Interkomm.h  MainView.cpp  MainView.h  Studiomux.cpp  Studiomux.h
source/app/src/common/Structure/: Channel.cpp  Channel.h  InterkommSession.cpp  InterkommSession.h  Role.cpp  Role.h  StructureBase.cpp  StructureBase.h
source/app/src/common/Structure/Channel/: Channel.cpp  Channel.h
source/app/src/common/Structure/Role/: Role.cpp  Role.h
source/app/src/common/Structure/Session/: Session.cpp  Session.h
source/app/src/common/Structure/User/: Profile.cpp  Profile.h  SuperUser.cpp  SuperUser.h  User.cpp  User.h
source/app/src/common/Structure/Workspace/: Workspace.cpp  Workspace.h
source/app/src/common/User/: SuperUser.cpp  SuperUser.h  User.cpp  User.h
source/app/src/platform/ios/: iTunesArtwork@2x  profil.developerprofile
source/graphics/: browser_topbar.sketch  help_topbar.sketch  midimux_topbar.sketch  oscmux_topbar.sketch  settings_topbar.sketch  studiomux_icon_app_topbar.sketch  studiomux_icon_base.sketch
source/libs/ios/opus.framework/: opus
source/libs/platform/ios/opus.framework/: opus
source/libs/platform/ios/opus2.framework/: Info.plist
source/scripts/: build_all.sh  build_android.sh  build_ios.sh  build_osx.sh  build_projects.sh  build_version.h.in  build_win.bat  clean.sh  upload_ios.sh
source/sdks/VST3_SDK/cmake/modules/: AddSMTGLibrary.cmake  AddVST3AuV3.cmake  AddVST3Options.cmake  Global.cmake  SetupVST3LibraryDefaultPath.cmake
source/sdks/VST3_SDK/public.sdk/: CMakeLists.txt
source/sdks/VST3_SDK/public.sdk/samples/vst-hosting/editorhost/: CMakeLists.txt
source/sdks/VST3_SDK/public.sdk/samples/vst-hosting/editorhost/source/platform/mac/: platform.mm
source/sdks/VST3_SDK/public.sdk/source/main/: macmain.cpp
source/sdks/VST3_SDK/public.sdk/source/vst/auwrapper/: aucocoaclassprefix.h
